# RxTx

./: CMakeLists.txt  RxTX.sln
ext/libwebsockets/cmake/: LibwebsocketsTargets-release.cmake  libwebsockets-config-version.cmake
ext/libwebsockets/include/: lws_config.h
ext/libwebsockets/lib/: websockets_static.lib
ext/zlib/lib/: zlib.lib  zlibd.lib  zlibstatic.lib  zlibstaticd.lib
inc/: libRxTx.h
inc/RxTx/: RxTx.h  RxTxCommon.h
src/appRxTx/: CMakeLists.txt  main.cpp
src/appRxTxClient/: appRxTxClient.vcxproj  main.cpp  test.cpp
src/appRxTxServer/: appRxTxServer.vcxproj  main.cpp
src/libRxTx/: CMakeLists.txt  RxTx.cpp  RxTx.h  dllmain.cpp  libRxTx.vcxproj  libRxTx.vcxproj.filters
